--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "@detonator/react",
-  "version": "1.3.1",
-  "description": "",
+  "version": "1.3.2",
+  "description": "Integrate Detonator and React.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iconshot/detonator-untrue.git"
+  },
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "detonator",
+    "react"
+  ],
+  "license": "MIT",
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.2",
