--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@detonator/react",
+  "name": "@rioter/react",
   "version": "1.3.4",
-  "description": "Integrate Detonator and React.",
+  "description": "Integrate Rioter and React.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/iconshot/detonator-react.git"
+    "url": "https://github.com/iconshot/rioter-react.git"
   },
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c"
   },
   "keywords": [
-    "detonator",
+    "rioter",
     "react"
   ],
   "license": "MIT",
